Extension API snapshot: context for java type resolvers and mappers; ViewtonBuilder tests